re PR fortran/45597 (ICE: in gfc_trans_cycle, at fortran/trans-stmt.c:4320)

PR fortran/45597
	* trans-openmp.c (gfc_trans_omp_do): Store exit/cycle labels on code
	instead of code->block.

	* gfortran.dg/gomp/pr45597.f90: New test.

From-SVN: r164005